--- a/src/pages/BuilderPage.module.css
+++ b/src/pages/BuilderPage.module.css
@@ -2,7 +2,6 @@
   width: 100%;
   max-width: 770px;
   margin: 0 auto;
-  padding-bottom: 100px;
 }
 
 .toolBar {
@@ -10,6 +9,10 @@
   justify-content: flex-end;
   padding: 20px 0;
   margin-bottom: 20px;
+  position: sticky;
+  top: 52px; /* Height of the Navbar */
+  z-index: 100;
+  background-color: var(--color-background);
 }
 
 .saveButton {
