--- a/src/pages/FillPage.module.css
+++ b/src/pages/FillPage.module.css
@@ -1,6 +1,5 @@
 .container {
   max-width: 100%;
-  padding-bottom: 100px;
 }
 
 .header {
